[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Styles/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Styles/normal_button_theme.tres" type="StyleBox" id=3]
[ext_resource path="res://Styles/Hover_button_theme.tres" type="StyleBox" id=4]
[ext_resource path="res://Styles/Pressed_button_theme.tres" type="StyleBox" id=5]
[ext_resource path="res://Scenes/settings_menu.tscn" type="PackedScene" id=6]

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ExitButton" type="Button" parent="."]
margin_left = 1057.0
margin_top = 613.0
margin_right = 1214.0
margin_bottom = 675.0
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.584314, 1, 0.992157, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "Выйти"

[node name="Start_Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.5
margin_top = -235.0
margin_right = 128.5
margin_bottom = -109.0
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.584314, 1, 0.992157, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "Начать"

[node name="Settings_Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -10.0
margin_right = 80.0
margin_bottom = 37.0
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.584314, 1, 0.992157, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "Настройки"

[node name="Load_Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.5
margin_top = -89.0
margin_right = 122.5
margin_bottom = -30.0
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.584314, 1, 0.992157, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "Загрузить игру"

[node name="SettingsMenu" parent="." instance=ExtResource( 6 )]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.231373, 0.231373, 0.231373, 1 )

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -327.0
margin_right = 327.0
margin_bottom = 35.0
text = "Вы уверены, что хотите начать новую игру?"
align = 1
valign = 1

[node name="No_Button" type="Button" parent="ColorRect/Label"]
margin_left = 25.0
margin_top = 226.0
margin_right = 221.0
margin_bottom = 302.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "Нет"

[node name="Yes_Button" type="Button" parent="ColorRect/Label"]
margin_left = 360.0
margin_top = 226.0
margin_right = 556.0
margin_bottom = 302.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "Да"

[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="Settings_Button" to="." method="_on_Settings_Button_pressed"]
[connection signal="pressed" from="Load_Button" to="." method="_on_Load_Button_pressed"]
[connection signal="pressed" from="ColorRect/Label/No_Button" to="." method="_on_No_Button_pressed"]
[connection signal="pressed" from="ColorRect/Label/Yes_Button" to="." method="_on_Yes_Button_pressed"]
